infrastructure/kubernetes/app/pyroscope-manifests/ingest-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: pyroscope-ingest
    namespace: observability
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - pyroscope-ingest.lan
    rules:
        - matches:
              - method: POST
                path:
                    type: PathPrefix
                    value: /ingest
          filters:
              - type: ExtensionRef
                extensionRef:
                    group: traefik.io
                    kind: Middleware
                    name: pyroscope-ingest-lan-only
          backendRefs:
              - name: pyroscope
                port: 4040
                group: ""
                kind: Service
                weight: 1
